[gd_scene load_steps=2 format=2]

[ext_resource path="res://Reap.gd" type="Script" id=1]

[node name="Reap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 450.0
margin_bottom = 75.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 450.0
margin_bottom = 75.0
border_color = Color( 0.568627, 0.568627, 0.568627, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 13.0
margin_right = 450.0
margin_bottom = 27.0
text = "Choose reap boost for foop:"
align = 1

[node name="Health" type="Button" parent="."]
margin_left = 18.0
margin_top = 35.0
margin_right = 143.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Restore HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magic" type="Button" parent="."]
margin_left = 162.0
margin_top = 35.0
margin_right = 287.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Restore MP"

[node name="Experience" type="Button" parent="."]
margin_left = 305.0
margin_top = 35.0
margin_right = 430.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Bonus XP"

[connection signal="pressed" from="Health" to="." method="_on_Health_pressed"]
[connection signal="pressed" from="Magic" to="." method="_on_Magic_pressed"]
[connection signal="pressed" from="Experience" to="." method="_on_Experience_pressed"]
